name:                Scaleway-Haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Scaleway-Haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scaleway
                     , Scaleway.Network
                     , Scaleway.Network.Server
                     , Scaleway.Network.Volume
                     , Scaleway.Network.Image
                     , Scaleway.Network.Organization
                     , Scaleway.Network.User
                     , Scaleway.Network.SecurityGroup
                     , Scaleway.Network.SecurityRule
                     , Scaleway.Network.Snapshot
                     , Scaleway.Network.Token
                     , Scaleway.Api
                     , Scaleway.Types
  other-modules:      Scaleway.Internal.Request
                    , Scaleway.Internal.Types
                    , Scaleway.Internal.Types.Server
                    , Scaleway.Internal.Types.Volume
                    , Scaleway.Internal.Types.Image
                    , Scaleway.Internal.Types.ResourceId
                    , Scaleway.Internal.Types.SecurityGroup
                    , Scaleway.Internal.Types.SecurityRule
                    , Scaleway.Internal.Types.Snapshot
                    , Scaleway.Internal.Types.Get
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , time
                     , bytestring
                     , cases
                     , unordered-containers
                     , lens
                     , wreq
                     , mtl
                     , servant
                     , servant-client
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, FlexibleContexts, DeriveGeneric, RecordWildCards

source-repository head
  type:     git
  location: https://github.com/githubuser/Scaleway-Haskell
