name:                Scaleway-Haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Scaleway-Haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scaleway
                     , Scaleway.API
                     , Scaleway.Types
                     , Scaleway.API.Core
                     , Scaleway.API.Server
                     , Scaleway.API.Volume
                     , Scaleway.API.Image
                     , Scaleway.API.SecurityGroup
                     , Scaleway.API.Snapshot
                     , Scaleway.API.Organization
                     , Scaleway.API.Token
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , aeson-casing
                     , time
                     , bytestring
                     , cases
                     , unordered-containers
                     , lens
                     , wreq
                     , mtl
                     , servant
                     , servant-client
                     , http-client
                     , http-client-tls
                     , connection==0.2.8
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, FlexibleContexts, DeriveGeneric, RecordWildCards

source-repository head
  type:     git
  location: https://github.com/githubuser/Scaleway-Haskell
